--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,9 @@ form input[type="submit"]:hover {
     padding: 20px;
     margin: 10px;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /****************************************************/
@@ -185,7 +188,7 @@ form input[type="submit"]:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 100px 0px;
+    margin: 0px 0px;
 }
 
 /****************************************************/
@@ -232,6 +235,21 @@ form input[type="submit"]:hover {
 /****************************************************/
 /* BOTONES */
 /****************************************************/
+.boton {
+    background-color: #131313;
+    color: #F4F2F3;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+}
+
+.boton:hover {
+    background-color: #040403;
+}
+
 .delete-button {
     cursor: pointer;
 }
